# auxum

./: CMakeLists.txt  README.md
inc/auxum/: std.h
inc/auxum/data/: bitset.h  dynarray.h
inc/auxum/file/: ini.h  utils.h
inc/auxum/os/: thread.h
inc/auxum/platform/: app.h  plugin.h  plugin_loader.h
inc/auxum/platform/vita/: heap.h
inc/auxum/std/: error.h  strings.h
src/data/: bitset.c  dynarray.c
src/file/: ini.c  utils.c
src/os/: thread.c
src/platform/: app.c  plugin_loader.c
src/std/: strings.c
test/: main.c
test/data/: bitset.c  dynarray.c
